<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_detail_movie_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:context=".views.detail_movieActivity">
            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_detail_movie_backdrop"
                    app:layout_constraintGuide_percent="0.25"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_detail_movie_card_horizontal"
                    app:layout_constraintGuide_percent="0.20"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_detail_movie_card_detail_movies"
                    app:layout_constraintGuide_percent="0.8"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imageview_detail_movie_backdrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/guideline_detail_movie_backdrop"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/backdrop_image"
                    tools:backgroundTint="@color/black"
                    android:layout_height="0dp"/>
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_detail_movie_main"
                    app:layout_constraintTop_toBottomOf="@id/guideline_detail_movie_card_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_detail_movie_card_detail_movies"
                    android:layout_width="0dp"
                    app:cardCornerRadius="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/design_default_color_secondary">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="24dp">
                    <TextView
                            android:id="@+id/textview_detail_movie_title"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_width="0dp"
                            android:textAlignment="textStart"
                            android:singleLine="false"
                            android:textColor="@color/black"
                            android:text="@string/movie_title"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"/>
                    <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_detail_movie_popularity"
                            app:cardCornerRadius="0dp"
                            android:layout_width="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title"
                            app:layout_constraintStart_toStartOf="parent"
                            android:backgroundTint="@color/black"
                            app:cardElevation="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingVertical="3dp"
                                android:paddingHorizontal="8dp"
                                tools:ignore="UseCompoundDrawables">
                            <ImageView android:layout_width="12dp"
                                       android:layout_height="12dp"
                                       android:layout_gravity="center"
                                       android:layout_marginEnd="6dp"
                                       android:src="@drawable/ic_star_rate_black_24dp"
                                       app:tint="@color/gold"
                                       android:contentDescription="@string/star_icon"/>
                            <TextView
                                    android:id="@+id/detail_movie_vote_average_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:includeFontPadding="false"
                                    android:text="@string/rating_sample"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_detail_movie_lang"
                            android:layout_width="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title"
                            app:layout_constraintStart_toEndOf="@id/card_detail_movie_popularity"
                            android:backgroundTint="@color/black"
                            android:layout_marginStart="10dp"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingVertical="3dp"
                                android:paddingHorizontal="8dp"
                                tools:ignore="UseCompoundDrawables">
                            <TextView
                                    android:id="@+id/detail_movie_lang_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:includeFontPadding="false"
                                    android:text="@string/_18"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_detail_movie_adult"
                            android:layout_width="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_title"
                            app:layout_constraintStart_toEndOf="@id/card_detail_movie_lang"
                            android:backgroundTint="@color/black"
                            android:layout_marginStart="10dp"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingVertical="3dp"
                                android:paddingHorizontal="8dp"
                                tools:ignore="UseCompoundDrawables">
                            <TextView
                                    android:id="@+id/detail_movie_adult_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:includeFontPadding="false"
                                    android:text="@string/_18"
                                    android:textColor="@color/white"
                                    android:textSize="12sp"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                    android:id="@+id/textview_detail_movie_overview_title"
                    android:layout_margin="24dp"
                    app:layout_constraintTop_toBottomOf="@id/card_detail_movie_main"
                    android:text="@string/overview"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textview_detail_movie_overview_content"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_overview_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lorem_ipsum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textview_detail_movie_genres_title"
                    android:layout_margin="24dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_overview_content"
                    android:text="@string/genres"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textview_detail_movie_genres_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_genres_title"
                    android:text="@string/genres_sample"
                    android:singleLine="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textview_detail_movie_date_title"
                    android:layout_margin="24dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_genres_content"
                    android:text="@string/date_released_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textview_detail_movie_date_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/textview_detail_movie_date_title"
                    android:text="@string/_2020_04_20"
                    android:singleLine="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/progress_detail_movie"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </FrameLayout>
</ScrollView>